--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ APP_DEBUG = true
 [APP]
 DEFAULT_TIMEZONE = Asia/Shanghai
 WEBSOCKET_URL = ws.example.com/ws/im
+GLOBAL_AUTH_KEY = easy-_-chat
 
 [DATABASE]
 TYPE = mysql
